// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser > doctype 1`] = `
{
  "isFragment": false,
  "nodeList": [
    {
      "depth": 0,
      "endCol": 103,
      "endLine": 1,
      "endOffset": 102,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "-//W3C//DTD HTML 4.01 Transitional//EN",
      "raw": "<!DOCTYPE html public "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "systemId": "http://www.w3.org/TR/html4/loose.dtd",
      "type": "doctype",
    },
  ],
  "raw": "<!DOCTYPE html public "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">",
}
`;

exports[`parser > doctype 2`] = `
{
  "isFragment": false,
  "nodeList": [
    {
      "depth": 0,
      "endCol": 64,
      "endLine": 1,
      "endOffset": 63,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "-//W3C//DTD HTML 4.01 Transitional//EN",
      "raw": "<!DOCTYPE html public "-//W3C//DTD HTML 4.01 Transitional//EN">",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "systemId": "",
      "type": "doctype",
    },
  ],
  "raw": "<!DOCTYPE html public "-//W3C//DTD HTML 4.01 Transitional//EN">",
}
`;

exports[`parser > doctype 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,78 +4,20 @@
      Object {
        "depth": 0,
        "endCol": 103,
        "endLine": 1,
        "endOffset": 102,
+       "isFragment": false,
+       "isGhost": false,
        "name": "html",
        "nodeName": "#doctype",
        "publicId": "-//W3C//DTD HTML 4.01 Transitional//EN",
        "raw": "<!DOCTYPE html public \\"-//W3C//DTD HTML 4.01 Transitional//EN\\" \\"http://www.w3.org/TR/html4/loose.dtd\\">",
        "startCol": 1,
        "startLine": 1,
        "startOffset": 0,
        "systemId": "http://www.w3.org/TR/html4/loose.dtd",
        "type": "doctype",
-     },
-     Object {
-       "attributes": Array [],
-       "depth": 0,
-       "elementType": "html",
-       "endCol": 103,
-       "endLine": 1,
-       "endOffset": 102,
-       "isFragment": false,
-       "isGhost": true,
-       "namespace": "http://www.w3.org/1999/xhtml",
-       "nodeName": "html",
-       "pairNode": null,
-       "raw": "",
-       "startCol": 103,
-       "startLine": 1,
-       "startOffset": 102,
-       "tagCloseChar": "",
-       "tagOpenChar": "",
-       "type": "starttag",
-     },
-     Object {
-       "attributes": Array [],
-       "depth": 1,
-       "elementType": "html",
-       "endCol": 103,
-       "endLine": 1,
-       "endOffset": 102,
-       "isFragment": false,
-       "isGhost": true,
-       "namespace": "http://www.w3.org/1999/xhtml",
-       "nodeName": "head",
-       "pairNode": null,
-       "raw": "",
-       "startCol": 103,
-       "startLine": 1,
-       "startOffset": 102,
-       "tagCloseChar": "",
-       "tagOpenChar": "",
-       "type": "starttag",
-     },
-     Object {
-       "attributes": Array [],
-       "depth": 1,
-       "elementType": "html",
-       "endCol": 103,
-       "endLine": 1,
-       "endOffset": 102,
-       "isFragment": false,
-       "isGhost": true,
-       "namespace": "http://www.w3.org/1999/xhtml",
-       "nodeName": "body",
-       "pairNode": null,
-       "raw": "",
-       "startCol": 103,
-       "startLine": 1,
-       "startOffset": 102,
-       "tagCloseChar": "",
-       "tagOpenChar": "",
-       "type": "starttag",
      },
    ],
    "raw": "<!DOCTYPE html public \\"-//W3C//DTD HTML 4.01 Transitional//EN\\" \\"http://www.w3.org/TR/html4/loose.dtd\\">",
  }"
`;

exports[`parser > doctype 4`] = `
{
  "isFragment": false,
  "nodeList": [
    {
      "attributes": [],
      "depth": 0,
      "elementType": "html",
      "endCol": 7,
      "endLine": 1,
      "endOffset": 6,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "pairNode": {
        "depth": 0,
        "endCol": 14,
        "endLine": 1,
        "endOffset": 13,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "html",
        "pairNode": [Circular],
        "raw": "</html>",
        "startCol": 7,
        "startLine": 1,
        "startOffset": 6,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<html>",
      "selfClosingSolidus": {
        "endCol": 6,
        "endLine": 1,
        "endOffset": 5,
        "raw": "",
        "startCol": 6,
        "startLine": 1,
        "startOffset": 5,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 14,
      "endLine": 1,
      "endOffset": 13,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "html",
      "pairNode": {
        "attributes": [],
        "depth": 0,
        "elementType": "html",
        "endCol": 7,
        "endLine": 1,
        "endOffset": 6,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "html",
        "pairNode": [Circular],
        "raw": "<html>",
        "selfClosingSolidus": {
          "endCol": 6,
          "endLine": 1,
          "endOffset": 5,
          "raw": "",
          "startCol": 6,
          "startLine": 1,
          "startOffset": 5,
        },
        "startCol": 1,
        "startLine": 1,
        "startOffset": 0,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</html>",
      "startCol": 7,
      "startLine": 1,
      "startOffset": 6,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
  ],
  "raw": "<html></html>",
}
`;

exports[`parser > html parser difference 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,10 +4,12 @@
      Object {
        "depth": 0,
        "endCol": 7,
        "endLine": 2,
        "endOffset": 7,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "
        ",
        "startCol": 1,
        "startLine": 1,
@@ -19,19 +21,22 @@
        "depth": 0,
        "elementType": "html",
        "endCol": 12,
        "endLine": 2,
        "endOffset": 12,
+       "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "div",
        "pairNode": Object {
          "depth": 0,
          "endCol": 13,
          "endLine": 6,
          "endOffset": 79,
+         "isFragment": false,
+         "isGhost": false,
          "nodeName": "div",
          "pairNode": [Circular],
          "raw": "</div>",
          "startCol": 7,
          "startLine": 6,
@@ -40,30 +45,32 @@
          "tagOpenChar": "</",
          "type": "endtag",
        },
        "raw": "<div>",
        "selfClosingSolidus": Object {
-         "endCol": 8,
+         "endCol": 11,
          "endLine": 2,
-         "endOffset": 8,
+         "endOffset": 11,
          "raw": "",
-         "startCol": 8,
+         "startCol": 11,
          "startLine": 2,
-         "startOffset": 8,
+         "startOffset": 11,
        },
        "startCol": 7,
        "startLine": 2,
        "startOffset": 7,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      Object {
-       "depth": 1,
+       "depth": 0,
        "endCol": 9,
        "endLine": 4,
        "endOffset": 35,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "
          Text1
          ",
        "startCol": 12,
@@ -71,24 +78,27 @@
        "startOffset": 12,
        "type": "text",
      },
      Object {
        "attributes": Array [],
-       "depth": 1,
+       "depth": 0,
        "elementType": "html",
        "endCol": 15,
        "endLine": 4,
        "endOffset": 41,
+       "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "span",
        "pairNode": Object {
-         "depth": 1,
+         "depth": 0,
          "endCol": 26,
          "endLine": 4,
          "endOffset": 52,
+         "isFragment": false,
+         "isGhost": false,
          "nodeName": "span",
          "pairNode": [Circular],
          "raw": "</span>",
          "startCol": 19,
          "startLine": 4,
@@ -97,64 +107,69 @@
          "tagOpenChar": "</",
          "type": "endtag",
        },
        "raw": "<span>",
        "selfClosingSolidus": Object {
-         "endCol": 10,
+         "endCol": 14,
          "endLine": 4,
-         "endOffset": 36,
+         "endOffset": 40,
          "raw": "",
-         "startCol": 10,
+         "startCol": 14,
          "startLine": 4,
-         "startOffset": 36,
+         "startOffset": 40,
        },
        "startCol": 9,
        "startLine": 4,
        "startOffset": 35,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      Object {
-       "depth": 2,
+       "depth": 0,
        "endCol": 19,
        "endLine": 4,
        "endOffset": 45,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "Text",
        "startCol": 15,
        "startLine": 4,
        "startOffset": 41,
        "type": "text",
      },
      Object {
-       "depth": 1,
+       "depth": 0,
        "endCol": 26,
        "endLine": 4,
        "endOffset": 52,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "span",
        "pairNode": Object {
          "attributes": Array [],
-         "depth": 1,
+         "depth": 0,
          "elementType": "html",
          "endCol": 15,
          "endLine": 4,
          "endOffset": 41,
+         "hasSpreadAttr": false,
          "isFragment": false,
          "isGhost": false,
          "namespace": "http://www.w3.org/1999/xhtml",
          "nodeName": "span",
          "pairNode": [Circular],
          "raw": "<span>",
          "selfClosingSolidus": Object {
-           "endCol": 10,
+           "endCol": 14,
            "endLine": 4,
-           "endOffset": 36,
+           "endOffset": 40,
            "raw": "",
-           "startCol": 10,
+           "startCol": 14,
            "startLine": 4,
-           "startOffset": 36,
+           "startOffset": 40,
          },
          "startCol": 9,
          "startLine": 4,
          "startOffset": 35,
          "tagCloseChar": ">",
@@ -168,14 +183,16 @@
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      Object {
-       "depth": 1,
+       "depth": 0,
        "endCol": 7,
        "endLine": 6,
        "endOffset": 73,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "
          Text2
        ",
        "startCol": 26,
@@ -186,32 +203,35 @@
      Object {
        "depth": 0,
        "endCol": 13,
        "endLine": 6,
        "endOffset": 79,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "div",
        "pairNode": Object {
          "attributes": Array [],
          "depth": 0,
          "elementType": "html",
          "endCol": 12,
          "endLine": 2,
          "endOffset": 12,
+         "hasSpreadAttr": false,
          "isFragment": false,
          "isGhost": false,
          "namespace": "http://www.w3.org/1999/xhtml",
          "nodeName": "div",
          "pairNode": [Circular],
          "raw": "<div>",
          "selfClosingSolidus": Object {
-           "endCol": 8,
+           "endCol": 11,
            "endLine": 2,
-           "endOffset": 8,
+           "endOffset": 11,
            "raw": "",
-           "startCol": 8,
+           "startCol": 11,
            "startLine": 2,
-           "startOffset": 8,
+           "startOffset": 11,
          },
          "startCol": 7,
          "startLine": 2,
          "startOffset": 7,
          "tagCloseChar": ">",
@@ -229,10 +249,12 @@
      Object {
        "depth": 0,
        "endCol": 5,
        "endLine": 7,
        "endOffset": 84,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "
      ",
        "startCol": 13,
        "startLine": 6,"
`;

exports[`parser > invalid tag 1`] = `
{
  "isFragment": true,
  "nodeList": [
    {
      "attributes": [
        {
          "endCol": 20,
          "endLine": 1,
          "endOffset": 20,
          "endQuote": {
            "endCol": 20,
            "endLine": 1,
            "endOffset": 20,
            "raw": """,
            "startCol": 19,
            "startLine": 1,
            "startOffset": 19,
          },
          "equal": {
            "endCol": 11,
            "endLine": 1,
            "endOffset": 11,
            "raw": "=",
            "startCol": 10,
            "startLine": 1,
            "startOffset": 10,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": {
            "endCol": 10,
            "endLine": 1,
            "endOffset": 10,
            "raw": "[*ngIf]",
            "startCol": 3,
            "startLine": 1,
            "startOffset": 3,
          },
          "nodeName": "[*ngIf]",
          "potentialName": "ngIf",
          "raw": "[*ngIf]="1 === 1"",
          "spacesAfterEqual": {
            "endCol": 11,
            "endLine": 1,
            "endOffset": 11,
            "raw": "",
            "startCol": 11,
            "startLine": 1,
            "startOffset": 11,
          },
          "spacesBeforeEqual": {
            "endCol": 10,
            "endLine": 1,
            "endOffset": 10,
            "raw": "",
            "startCol": 10,
            "startLine": 1,
            "startOffset": 10,
          },
          "spacesBeforeName": {
            "endCol": 3,
            "endLine": 1,
            "endOffset": 3,
            "raw": "",
            "startCol": 3,
            "startLine": 1,
            "startOffset": 3,
          },
          "startCol": 3,
          "startLine": 1,
          "startOffset": 3,
          "startQuote": {
            "endCol": 12,
            "endLine": 1,
            "endOffset": 12,
            "raw": """,
            "startCol": 11,
            "startLine": 1,
            "startOffset": 11,
          },
          "type": "attr",
          "value": {
            "endCol": 19,
            "endLine": 1,
            "endOffset": 19,
            "raw": "1 === 1",
            "startCol": 12,
            "startLine": 1,
            "startOffset": 12,
          },
        },
        {
          "endCol": 38,
          "endLine": 1,
          "endOffset": 38,
          "endQuote": {
            "endCol": 38,
            "endLine": 1,
            "endOffset": 38,
            "raw": """,
            "startCol": 37,
            "startLine": 1,
            "startOffset": 37,
          },
          "equal": {
            "endCol": 29,
            "endLine": 1,
            "endOffset": 29,
            "raw": "=",
            "startCol": 28,
            "startLine": 1,
            "startOffset": 28,
          },
          "isDuplicatable": false,
          "isDynamicValue": undefined,
          "name": {
            "endCol": 28,
            "endLine": 1,
            "endOffset": 28,
            "raw": "ng-*-if",
            "startCol": 21,
            "startLine": 1,
            "startOffset": 21,
          },
          "nodeName": "ng-*-if",
          "potentialName": "ng--if",
          "raw": "ng-*-if="2 === 2"",
          "spacesAfterEqual": {
            "endCol": 29,
            "endLine": 1,
            "endOffset": 29,
            "raw": "",
            "startCol": 29,
            "startLine": 1,
            "startOffset": 29,
          },
          "spacesBeforeEqual": {
            "endCol": 28,
            "endLine": 1,
            "endOffset": 28,
            "raw": "",
            "startCol": 28,
            "startLine": 1,
            "startOffset": 28,
          },
          "spacesBeforeName": {
            "endCol": 21,
            "endLine": 1,
            "endOffset": 21,
            "raw": "",
            "startCol": 21,
            "startLine": 1,
            "startOffset": 21,
          },
          "startCol": 21,
          "startLine": 1,
          "startOffset": 21,
          "startQuote": {
            "endCol": 30,
            "endLine": 1,
            "endOffset": 30,
            "raw": """,
            "startCol": 29,
            "startLine": 1,
            "startOffset": 29,
          },
          "type": "attr",
          "value": {
            "endCol": 37,
            "endLine": 1,
            "endOffset": 37,
            "raw": "2 === 2",
            "startCol": 30,
            "startLine": 1,
            "startOffset": 30,
          },
        },
        {
          "endCol": 48,
          "endLine": 1,
          "endOffset": 48,
          "endQuote": {
            "endCol": 48,
            "endLine": 1,
            "endOffset": 48,
            "raw": """,
            "startCol": 47,
            "startLine": 1,
            "startOffset": 47,
          },
          "equal": {
            "endCol": 44,
            "endLine": 1,
            "endOffset": 44,
            "raw": "=",
            "startCol": 43,
            "startLine": 1,
            "startOffset": 43,
          },
          "isDuplicatable": false,
          "isDynamicValue": undefined,
          "name": {
            "endCol": 43,
            "endLine": 1,
            "endOffset": 43,
            "raw": "href",
            "startCol": 39,
            "startLine": 1,
            "startOffset": 39,
          },
          "nodeName": "href",
          "potentialName": "href",
          "raw": "href="{{"",
          "spacesAfterEqual": {
            "endCol": 44,
            "endLine": 1,
            "endOffset": 44,
            "raw": "",
            "startCol": 44,
            "startLine": 1,
            "startOffset": 44,
          },
          "spacesBeforeEqual": {
            "endCol": 43,
            "endLine": 1,
            "endOffset": 43,
            "raw": "",
            "startCol": 43,
            "startLine": 1,
            "startOffset": 43,
          },
          "spacesBeforeName": {
            "endCol": 39,
            "endLine": 1,
            "endOffset": 39,
            "raw": "",
            "startCol": 39,
            "startLine": 1,
            "startOffset": 39,
          },
          "startCol": 39,
          "startLine": 1,
          "startOffset": 39,
          "startQuote": {
            "endCol": 45,
            "endLine": 1,
            "endOffset": 45,
            "raw": """,
            "startCol": 44,
            "startLine": 1,
            "startOffset": 44,
          },
          "type": "attr",
          "value": {
            "endCol": 47,
            "endLine": 1,
            "endOffset": 47,
            "raw": "{{",
            "startCol": 45,
            "startLine": 1,
            "startOffset": 45,
          },
        },
        {
          "endCol": 79,
          "endLine": 1,
          "endOffset": 79,
          "endQuote": {
            "endCol": 79,
            "endLine": 1,
            "endOffset": 79,
            "raw": """,
            "startCol": 78,
            "startLine": 1,
            "startOffset": 78,
          },
          "equal": {
            "endCol": 58,
            "endLine": 1,
            "endOffset": 58,
            "raw": "=",
            "startCol": 57,
            "startLine": 1,
            "startOffset": 57,
          },
          "isDuplicatable": false,
          "isDynamicValue": undefined,
          "name": {
            "endCol": 57,
            "endLine": 1,
            "endOffset": 57,
            "raw": "download",
            "startCol": 49,
            "startLine": 1,
            "startOffset": 49,
          },
          "nodeName": "download",
          "potentialName": "download",
          "raw": "download="{ { downloadUrl } }"",
          "spacesAfterEqual": {
            "endCol": 58,
            "endLine": 1,
            "endOffset": 58,
            "raw": "",
            "startCol": 58,
            "startLine": 1,
            "startOffset": 58,
          },
          "spacesBeforeEqual": {
            "endCol": 57,
            "endLine": 1,
            "endOffset": 57,
            "raw": "",
            "startCol": 57,
            "startLine": 1,
            "startOffset": 57,
          },
          "spacesBeforeName": {
            "endCol": 49,
            "endLine": 1,
            "endOffset": 49,
            "raw": "",
            "startCol": 49,
            "startLine": 1,
            "startOffset": 49,
          },
          "startCol": 49,
          "startLine": 1,
          "startOffset": 49,
          "startQuote": {
            "endCol": 59,
            "endLine": 1,
            "endOffset": 59,
            "raw": """,
            "startCol": 58,
            "startLine": 1,
            "startOffset": 58,
          },
          "type": "attr",
          "value": {
            "endCol": 78,
            "endLine": 1,
            "endOffset": 78,
            "raw": "{ { downloadUrl } }",
            "startCol": 59,
            "startLine": 1,
            "startOffset": 59,
          },
        },
      ],
      "depth": 0,
      "elementType": "html",
      "endCol": 83,
      "endLine": 1,
      "endOffset": 82,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "a",
      "pairNode": null,
      "raw": "<a [*ngIf]="1 === 1" ng-*-if="2 === 2" href="{{" download="{ { downloadUrl } }" />",
      "selfClosingSolidus": {
        "endCol": 5,
        "endLine": 1,
        "endOffset": 4,
        "raw": " /",
        "startCol": 3,
        "startLine": 1,
        "startOffset": 2,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
  ],
  "raw": "<a [*ngIf]="1 === 1" ng-*-if="2 === 2" href="{{" download="{ { downloadUrl } }" /></>",
  "unknownParseError": "Only void, custom and foreign elements can be self closed "a" ("[ERROR ->]<a [*ngIf]="1 === 1" ng-*-if="2 === 2" href="{{" download="{ { downloadUrl } }" /></>"): angular-html-parser@0:0
Unexpected closing tag "". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags ("<a [*ngIf]="1 === 1" ng-*-if="2 === 2" href="{{" download="{ { downloadUrl } }" />[ERROR ->]</>"): angular-html-parser@0:82",
}
`;

exports[`parser > parser.parse 1`] = `
{
  "isFragment": false,
  "nodeList": [
    {
      "depth": 0,
      "endCol": 9,
      "endLine": 2,
      "endOffset": 9,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 24,
      "endLine": 2,
      "endOffset": 24,
      "isFragment": false,
      "isGhost": false,
      "name": "html",
      "nodeName": "#doctype",
      "publicId": "",
      "raw": "<!DOCTYPE html>",
      "startCol": 9,
      "startLine": 2,
      "startOffset": 9,
      "systemId": "",
      "type": "doctype",
    },
    {
      "depth": 0,
      "endCol": 9,
      "endLine": 3,
      "endOffset": 33,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 24,
      "startLine": 2,
      "startOffset": 24,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 72,
      "endLine": 7,
      "endOffset": 412,
      "isBogus": false,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<![CDATA[ Within this Character Data block I can use double dashes as
        much as I want (along with <, &, ', and ") *and* %MyParamEntity; will be
        expanded to the text "Has been expanded" ... however, I can't use the
        CEND sequence. If I need to use CEND I must escape one of the brackets
        or the greater-than sign using concatenated CDATA sections. ]]>",
      "startCol": 9,
      "startLine": 3,
      "startOffset": 33,
      "type": "comment",
    },
    {
      "depth": 0,
      "endCol": 9,
      "endLine": 8,
      "endOffset": 421,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 72,
      "startLine": 7,
      "startOffset": 412,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 35,
      "endLine": 8,
      "endOffset": 447,
      "isBogus": false,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<!-- top level comment -->",
      "startCol": 9,
      "startLine": 8,
      "startOffset": 421,
      "type": "comment",
    },
    {
      "depth": 0,
      "endCol": 9,
      "endLine": 9,
      "endOffset": 456,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 35,
      "startLine": 8,
      "startOffset": 447,
      "type": "text",
    },
    {
      "attributes": [
        {
          "endCol": 23,
          "endLine": 9,
          "endOffset": 471,
          "endQuote": {
            "endCol": 23,
            "endLine": 9,
            "endOffset": 471,
            "raw": """,
            "startCol": 22,
            "startLine": 9,
            "startOffset": 470,
          },
          "equal": {
            "endCol": 19,
            "endLine": 9,
            "endOffset": 467,
            "raw": "=",
            "startCol": 18,
            "startLine": 9,
            "startOffset": 466,
          },
          "isDuplicatable": false,
          "isDynamicValue": undefined,
          "name": {
            "endCol": 18,
            "endLine": 9,
            "endOffset": 466,
            "raw": "lang",
            "startCol": 14,
            "startLine": 9,
            "startOffset": 462,
          },
          "nodeName": "lang",
          "potentialName": "lang",
          "raw": "lang="en"",
          "spacesAfterEqual": {
            "endCol": 19,
            "endLine": 9,
            "endOffset": 467,
            "raw": "",
            "startCol": 19,
            "startLine": 9,
            "startOffset": 467,
          },
          "spacesBeforeEqual": {
            "endCol": 18,
            "endLine": 9,
            "endOffset": 466,
            "raw": "",
            "startCol": 18,
            "startLine": 9,
            "startOffset": 466,
          },
          "spacesBeforeName": {
            "endCol": 14,
            "endLine": 9,
            "endOffset": 462,
            "raw": "",
            "startCol": 14,
            "startLine": 9,
            "startOffset": 462,
          },
          "startCol": 14,
          "startLine": 9,
          "startOffset": 462,
          "startQuote": {
            "endCol": 20,
            "endLine": 9,
            "endOffset": 468,
            "raw": """,
            "startCol": 19,
            "startLine": 9,
            "startOffset": 467,
          },
          "type": "attr",
          "value": {
            "endCol": 22,
            "endLine": 9,
            "endOffset": 470,
            "raw": "en",
            "startCol": 20,
            "startLine": 9,
            "startOffset": 468,
          },
        },
      ],
      "depth": 0,
      "elementType": "html",
      "endCol": 25,
      "endLine": 9,
      "endOffset": 472,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "html",
      "pairNode": {
        "depth": 0,
        "endCol": 16,
        "endLine": 32,
        "endOffset": 1087,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "html",
        "pairNode": [Circular],
        "raw": "</html>",
        "startCol": 9,
        "startLine": 32,
        "startOffset": 1080,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<html lang="en">",
      "selfClosingSolidus": {
        "endCol": 14,
        "endLine": 9,
        "endOffset": 461,
        "raw": "",
        "startCol": 14,
        "startLine": 9,
        "startOffset": 461,
      },
      "startCol": 9,
      "startLine": 9,
      "startOffset": 456,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 11,
      "endLine": 10,
      "endOffset": 483,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
          ",
      "startCol": 25,
      "startLine": 9,
      "startOffset": 472,
      "type": "text",
    },
    {
      "attributes": [],
      "depth": 0,
      "elementType": "html",
      "endCol": 17,
      "endLine": 10,
      "endOffset": 489,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "body",
      "pairNode": {
        "depth": 0,
        "endCol": 18,
        "endLine": 31,
        "endOffset": 1071,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "body",
        "pairNode": [Circular],
        "raw": "</body>",
        "startCol": 11,
        "startLine": 31,
        "startOffset": 1064,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<body>",
      "selfClosingSolidus": {
        "endCol": 16,
        "endLine": 10,
        "endOffset": 488,
        "raw": "",
        "startCol": 16,
        "startLine": 10,
        "startOffset": 488,
      },
      "startCol": 11,
      "startLine": 10,
      "startOffset": 483,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 11,
      "endOffset": 502,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 17,
      "startLine": 10,
      "startOffset": 489,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 34,
      "endLine": 11,
      "endOffset": 523,
      "isBogus": false,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#comment",
      "raw": "<!-- body comment -->",
      "startCol": 13,
      "startLine": 11,
      "startOffset": 502,
      "type": "comment",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 12,
      "endOffset": 536,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 34,
      "startLine": 11,
      "startOffset": 523,
      "type": "text",
    },
    {
      "attributes": [
        {
          "endCol": 34,
          "endLine": 12,
          "endOffset": 558,
          "endQuote": {
            "endCol": 34,
            "endLine": 12,
            "endOffset": 558,
            "raw": """,
            "startCol": 33,
            "startLine": 12,
            "startOffset": 557,
          },
          "equal": {
            "endCol": 26,
            "endLine": 12,
            "endOffset": 550,
            "raw": "=",
            "startCol": 25,
            "startLine": 12,
            "startOffset": 549,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": {
            "endCol": 25,
            "endLine": 12,
            "endOffset": 549,
            "raw": "[type]",
            "startCol": 19,
            "startLine": 12,
            "startOffset": 543,
          },
          "nodeName": "[type]",
          "potentialName": "type",
          "raw": "[type]="'text'"",
          "spacesAfterEqual": {
            "endCol": 26,
            "endLine": 12,
            "endOffset": 550,
            "raw": "",
            "startCol": 26,
            "startLine": 12,
            "startOffset": 550,
          },
          "spacesBeforeEqual": {
            "endCol": 25,
            "endLine": 12,
            "endOffset": 549,
            "raw": "",
            "startCol": 25,
            "startLine": 12,
            "startOffset": 549,
          },
          "spacesBeforeName": {
            "endCol": 19,
            "endLine": 12,
            "endOffset": 543,
            "raw": "",
            "startCol": 19,
            "startLine": 12,
            "startOffset": 543,
          },
          "startCol": 19,
          "startLine": 12,
          "startOffset": 543,
          "startQuote": {
            "endCol": 27,
            "endLine": 12,
            "endOffset": 551,
            "raw": """,
            "startCol": 26,
            "startLine": 12,
            "startOffset": 550,
          },
          "type": "attr",
          "value": {
            "endCol": 33,
            "endLine": 12,
            "endOffset": 557,
            "raw": "'text'",
            "startCol": 27,
            "startLine": 12,
            "startOffset": 551,
          },
        },
      ],
      "depth": 0,
      "elementType": "html",
      "endCol": 38,
      "endLine": 12,
      "endOffset": 561,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "pairNode": null,
      "raw": "<input [type]="'text'" />",
      "selfClosingSolidus": {
        "endCol": 21,
        "endLine": 12,
        "endOffset": 544,
        "raw": " /",
        "startCol": 19,
        "startLine": 12,
        "startOffset": 542,
      },
      "startCol": 13,
      "startLine": 12,
      "startOffset": 536,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 13,
      "endOffset": 574,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 38,
      "startLine": 12,
      "startOffset": 561,
      "type": "text",
    },
    {
      "attributes": [
        {
          "endCol": 26,
          "endLine": 14,
          "endOffset": 607,
          "endQuote": {
            "endCol": 26,
            "endLine": 14,
            "endOffset": 607,
            "raw": """,
            "startCol": 25,
            "startLine": 14,
            "startOffset": 606,
          },
          "equal": {
            "endCol": 19,
            "endLine": 14,
            "endOffset": 600,
            "raw": "=",
            "startCol": 18,
            "startLine": 14,
            "startOffset": 599,
          },
          "isDuplicatable": false,
          "isDynamicValue": undefined,
          "name": {
            "endCol": 18,
            "endLine": 14,
            "endOffset": 599,
            "raw": "type",
            "startCol": 14,
            "startLine": 14,
            "startOffset": 595,
          },
          "nodeName": "type",
          "potentialName": "type",
          "raw": "type="radio"",
          "spacesAfterEqual": {
            "endCol": 19,
            "endLine": 14,
            "endOffset": 600,
            "raw": "",
            "startCol": 19,
            "startLine": 14,
            "startOffset": 600,
          },
          "spacesBeforeEqual": {
            "endCol": 18,
            "endLine": 14,
            "endOffset": 599,
            "raw": "",
            "startCol": 18,
            "startLine": 14,
            "startOffset": 599,
          },
          "spacesBeforeName": {
            "endCol": 14,
            "endLine": 14,
            "endOffset": 595,
            "raw": "",
            "startCol": 14,
            "startLine": 14,
            "startOffset": 595,
          },
          "startCol": 14,
          "startLine": 14,
          "startOffset": 595,
          "startQuote": {
            "endCol": 20,
            "endLine": 14,
            "endOffset": 601,
            "raw": """,
            "startCol": 19,
            "startLine": 14,
            "startOffset": 600,
          },
          "type": "attr",
          "value": {
            "endCol": 25,
            "endLine": 14,
            "endOffset": 606,
            "raw": "radio",
            "startCol": 20,
            "startLine": 14,
            "startOffset": 601,
          },
        },
        {
          "endCol": 30,
          "endLine": 15,
          "endOffset": 638,
          "endQuote": {
            "endCol": 30,
            "endLine": 15,
            "endOffset": 638,
            "raw": """,
            "startCol": 29,
            "startLine": 15,
            "startOffset": 637,
          },
          "equal": {
            "endCol": 24,
            "endLine": 15,
            "endOffset": 632,
            "raw": "=",
            "startCol": 23,
            "startLine": 15,
            "startOffset": 631,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": {
            "endCol": 23,
            "endLine": 15,
            "endOffset": 631,
            "raw": "[checked]",
            "startCol": 14,
            "startLine": 15,
            "startOffset": 622,
          },
          "nodeName": "[checked]",
          "potentialName": "checked",
          "raw": "[checked]="true"",
          "spacesAfterEqual": {
            "endCol": 24,
            "endLine": 15,
            "endOffset": 632,
            "raw": "",
            "startCol": 24,
            "startLine": 15,
            "startOffset": 632,
          },
          "spacesBeforeEqual": {
            "endCol": 23,
            "endLine": 15,
            "endOffset": 631,
            "raw": "",
            "startCol": 23,
            "startLine": 15,
            "startOffset": 631,
          },
          "spacesBeforeName": {
            "endCol": 14,
            "endLine": 15,
            "endOffset": 622,
            "raw": "",
            "startCol": 14,
            "startLine": 15,
            "startOffset": 622,
          },
          "startCol": 14,
          "startLine": 15,
          "startOffset": 622,
          "startQuote": {
            "endCol": 25,
            "endLine": 15,
            "endOffset": 633,
            "raw": """,
            "startCol": 24,
            "startLine": 15,
            "startOffset": 632,
          },
          "type": "attr",
          "value": {
            "endCol": 29,
            "endLine": 15,
            "endOffset": 637,
            "raw": "true",
            "startCol": 25,
            "startLine": 15,
            "startOffset": 633,
          },
        },
      ],
      "depth": 0,
      "elementType": "html",
      "endCol": 15,
      "endLine": 16,
      "endOffset": 653,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "pairNode": null,
      "raw": "<input
              type="radio"
              [checked]="true"
            />",
      "selfClosingSolidus": {
        "endCol": 14,
        "endLine": 14,
        "endOffset": 594,
        "raw": "
            /",
        "startCol": 19,
        "startLine": 13,
        "startOffset": 580,
      },
      "startCol": 13,
      "startLine": 13,
      "startOffset": 574,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 17,
      "endOffset": 666,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 15,
      "startLine": 16,
      "startOffset": 653,
      "type": "text",
    },
    {
      "attributes": [
        {
          "endCol": 27,
          "endLine": 18,
          "endOffset": 700,
          "endQuote": {
            "endCol": 27,
            "endLine": 18,
            "endOffset": 700,
            "raw": """,
            "startCol": 26,
            "startLine": 18,
            "startOffset": 699,
          },
          "equal": {
            "endCol": 19,
            "endLine": 18,
            "endOffset": 692,
            "raw": "=",
            "startCol": 18,
            "startLine": 18,
            "startOffset": 691,
          },
          "isDuplicatable": false,
          "isDynamicValue": undefined,
          "name": {
            "endCol": 18,
            "endLine": 18,
            "endOffset": 691,
            "raw": "type",
            "startCol": 14,
            "startLine": 18,
            "startOffset": 687,
          },
          "nodeName": "type",
          "potentialName": "type",
          "raw": "type="number"",
          "spacesAfterEqual": {
            "endCol": 19,
            "endLine": 18,
            "endOffset": 692,
            "raw": "",
            "startCol": 19,
            "startLine": 18,
            "startOffset": 692,
          },
          "spacesBeforeEqual": {
            "endCol": 18,
            "endLine": 18,
            "endOffset": 691,
            "raw": "",
            "startCol": 18,
            "startLine": 18,
            "startOffset": 691,
          },
          "spacesBeforeName": {
            "endCol": 14,
            "endLine": 18,
            "endOffset": 687,
            "raw": "",
            "startCol": 14,
            "startLine": 18,
            "startOffset": 687,
          },
          "startCol": 14,
          "startLine": 18,
          "startOffset": 687,
          "startQuote": {
            "endCol": 20,
            "endLine": 18,
            "endOffset": 693,
            "raw": """,
            "startCol": 19,
            "startLine": 18,
            "startOffset": 692,
          },
          "type": "attr",
          "value": {
            "endCol": 26,
            "endLine": 18,
            "endOffset": 699,
            "raw": "number",
            "startCol": 20,
            "startLine": 18,
            "startOffset": 693,
          },
        },
        {
          "endCol": 27,
          "endLine": 19,
          "endOffset": 728,
          "endQuote": {
            "endCol": 27,
            "endLine": 19,
            "endOffset": 728,
            "raw": """,
            "startCol": 26,
            "startLine": 19,
            "startOffset": 727,
          },
          "equal": {
            "endCol": 22,
            "endLine": 19,
            "endOffset": 723,
            "raw": "=",
            "startCol": 21,
            "startLine": 19,
            "startOffset": 722,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": {
            "endCol": 21,
            "endLine": 19,
            "endOffset": 722,
            "raw": "[value]",
            "startCol": 14,
            "startLine": 19,
            "startOffset": 715,
          },
          "nodeName": "[value]",
          "potentialName": "value",
          "raw": "[value]="123"",
          "spacesAfterEqual": {
            "endCol": 22,
            "endLine": 19,
            "endOffset": 723,
            "raw": "",
            "startCol": 22,
            "startLine": 19,
            "startOffset": 723,
          },
          "spacesBeforeEqual": {
            "endCol": 21,
            "endLine": 19,
            "endOffset": 722,
            "raw": "",
            "startCol": 21,
            "startLine": 19,
            "startOffset": 722,
          },
          "spacesBeforeName": {
            "endCol": 14,
            "endLine": 19,
            "endOffset": 715,
            "raw": "",
            "startCol": 14,
            "startLine": 19,
            "startOffset": 715,
          },
          "startCol": 14,
          "startLine": 19,
          "startOffset": 715,
          "startQuote": {
            "endCol": 23,
            "endLine": 19,
            "endOffset": 724,
            "raw": """,
            "startCol": 22,
            "startLine": 19,
            "startOffset": 723,
          },
          "type": "attr",
          "value": {
            "endCol": 26,
            "endLine": 19,
            "endOffset": 727,
            "raw": "123",
            "startCol": 23,
            "startLine": 19,
            "startOffset": 724,
          },
        },
      ],
      "depth": 0,
      "elementType": "html",
      "endCol": 15,
      "endLine": 20,
      "endOffset": 743,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "input",
      "pairNode": null,
      "raw": "<input
              type="number"
              [value]="123"
            />",
      "selfClosingSolidus": {
        "endCol": 14,
        "endLine": 18,
        "endOffset": 686,
        "raw": "
            /",
        "startCol": 19,
        "startLine": 17,
        "startOffset": 672,
      },
      "startCol": 13,
      "startLine": 17,
      "startOffset": 666,
      "tagCloseChar": "/>",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 21,
      "endOffset": 756,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 15,
      "startLine": 20,
      "startOffset": 743,
      "type": "text",
    },
    {
      "attributes": [],
      "depth": 0,
      "elementType": "html",
      "endCol": 21,
      "endLine": 21,
      "endOffset": 764,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "select",
      "pairNode": {
        "depth": 0,
        "endCol": 22,
        "endLine": 23,
        "endOffset": 840,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "select",
        "pairNode": [Circular],
        "raw": "</select>",
        "startCol": 13,
        "startLine": 23,
        "startOffset": 831,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<select>",
      "selfClosingSolidus": {
        "endCol": 20,
        "endLine": 21,
        "endOffset": 763,
        "raw": "",
        "startCol": 20,
        "startLine": 21,
        "startOffset": 763,
      },
      "startCol": 13,
      "startLine": 21,
      "startOffset": 756,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 15,
      "endLine": 22,
      "endOffset": 779,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              ",
      "startCol": 21,
      "startLine": 21,
      "startOffset": 764,
      "type": "text",
    },
    {
      "attributes": [
        {
          "endCol": 43,
          "endLine": 22,
          "endOffset": 808,
          "endQuote": {
            "endCol": 43,
            "endLine": 22,
            "endOffset": 808,
            "raw": """,
            "startCol": 42,
            "startLine": 22,
            "startOffset": 807,
          },
          "equal": {
            "endCol": 31,
            "endLine": 22,
            "endOffset": 796,
            "raw": "=",
            "startCol": 30,
            "startLine": 22,
            "startOffset": 795,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": {
            "endCol": 30,
            "endLine": 22,
            "endOffset": 795,
            "raw": "selected",
            "startCol": 22,
            "startLine": 22,
            "startOffset": 787,
          },
          "nodeName": "selected",
          "potentialName": "selected",
          "raw": "selected="{{ true }}"",
          "spacesAfterEqual": {
            "endCol": 31,
            "endLine": 22,
            "endOffset": 796,
            "raw": "",
            "startCol": 31,
            "startLine": 22,
            "startOffset": 796,
          },
          "spacesBeforeEqual": {
            "endCol": 30,
            "endLine": 22,
            "endOffset": 795,
            "raw": "",
            "startCol": 30,
            "startLine": 22,
            "startOffset": 795,
          },
          "spacesBeforeName": {
            "endCol": 22,
            "endLine": 22,
            "endOffset": 787,
            "raw": "",
            "startCol": 22,
            "startLine": 22,
            "startOffset": 787,
          },
          "startCol": 22,
          "startLine": 22,
          "startOffset": 787,
          "startQuote": {
            "endCol": 32,
            "endLine": 22,
            "endOffset": 797,
            "raw": """,
            "startCol": 31,
            "startLine": 22,
            "startOffset": 796,
          },
          "type": "attr",
          "value": {
            "endCol": 42,
            "endLine": 22,
            "endOffset": 807,
            "raw": "{{ true }}",
            "startCol": 32,
            "startLine": 22,
            "startOffset": 797,
          },
        },
      ],
      "depth": 0,
      "elementType": "html",
      "endCol": 45,
      "endLine": 22,
      "endOffset": 809,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "option",
      "pairNode": {
        "depth": 0,
        "endCol": 54,
        "endLine": 22,
        "endOffset": 818,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "option",
        "pairNode": [Circular],
        "raw": "</option>",
        "startCol": 45,
        "startLine": 22,
        "startOffset": 809,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<option selected="{{ true }}">",
      "selfClosingSolidus": {
        "endCol": 22,
        "endLine": 22,
        "endOffset": 786,
        "raw": "",
        "startCol": 22,
        "startLine": 22,
        "startOffset": 786,
      },
      "startCol": 15,
      "startLine": 22,
      "startOffset": 779,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 54,
      "endLine": 22,
      "endOffset": 818,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "option",
      "pairNode": {
        "attributes": [
          {
            "endCol": 43,
            "endLine": 22,
            "endOffset": 808,
            "endQuote": {
              "endCol": 43,
              "endLine": 22,
              "endOffset": 808,
              "raw": """,
              "startCol": 42,
              "startLine": 22,
              "startOffset": 807,
            },
            "equal": {
              "endCol": 31,
              "endLine": 22,
              "endOffset": 796,
              "raw": "=",
              "startCol": 30,
              "startLine": 22,
              "startOffset": 795,
            },
            "isDuplicatable": false,
            "isDynamicValue": true,
            "name": {
              "endCol": 30,
              "endLine": 22,
              "endOffset": 795,
              "raw": "selected",
              "startCol": 22,
              "startLine": 22,
              "startOffset": 787,
            },
            "nodeName": "selected",
            "potentialName": "selected",
            "raw": "selected="{{ true }}"",
            "spacesAfterEqual": {
              "endCol": 31,
              "endLine": 22,
              "endOffset": 796,
              "raw": "",
              "startCol": 31,
              "startLine": 22,
              "startOffset": 796,
            },
            "spacesBeforeEqual": {
              "endCol": 30,
              "endLine": 22,
              "endOffset": 795,
              "raw": "",
              "startCol": 30,
              "startLine": 22,
              "startOffset": 795,
            },
            "spacesBeforeName": {
              "endCol": 22,
              "endLine": 22,
              "endOffset": 787,
              "raw": "",
              "startCol": 22,
              "startLine": 22,
              "startOffset": 787,
            },
            "startCol": 22,
            "startLine": 22,
            "startOffset": 787,
            "startQuote": {
              "endCol": 32,
              "endLine": 22,
              "endOffset": 797,
              "raw": """,
              "startCol": 31,
              "startLine": 22,
              "startOffset": 796,
            },
            "type": "attr",
            "value": {
              "endCol": 42,
              "endLine": 22,
              "endOffset": 807,
              "raw": "{{ true }}",
              "startCol": 32,
              "startLine": 22,
              "startOffset": 797,
            },
          },
        ],
        "depth": 0,
        "elementType": "html",
        "endCol": 45,
        "endLine": 22,
        "endOffset": 809,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "option",
        "pairNode": [Circular],
        "raw": "<option selected="{{ true }}">",
        "selfClosingSolidus": {
          "endCol": 22,
          "endLine": 22,
          "endOffset": 786,
          "raw": "",
          "startCol": 22,
          "startLine": 22,
          "startOffset": 786,
        },
        "startCol": 15,
        "startLine": 22,
        "startOffset": 779,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</option>",
      "startCol": 45,
      "startLine": 22,
      "startOffset": 809,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 23,
      "endOffset": 831,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 54,
      "startLine": 22,
      "startOffset": 818,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 22,
      "endLine": 23,
      "endOffset": 840,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "select",
      "pairNode": {
        "attributes": [],
        "depth": 0,
        "elementType": "html",
        "endCol": 21,
        "endLine": 21,
        "endOffset": 764,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "select",
        "pairNode": [Circular],
        "raw": "<select>",
        "selfClosingSolidus": {
          "endCol": 20,
          "endLine": 21,
          "endOffset": 763,
          "raw": "",
          "startCol": 20,
          "startLine": 21,
          "startOffset": 763,
        },
        "startCol": 13,
        "startLine": 21,
        "startOffset": 756,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</select>",
      "startCol": 13,
      "startLine": 23,
      "startOffset": 831,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 24,
      "endOffset": 853,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 22,
      "startLine": 23,
      "startOffset": 840,
      "type": "text",
    },
    {
      "attributes": [],
      "depth": 0,
      "elementType": "html",
      "endCol": 18,
      "endLine": 24,
      "endOffset": 858,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "pairNode": {
        "depth": 0,
        "endCol": 19,
        "endLine": 28,
        "endOffset": 949,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "div",
        "pairNode": [Circular],
        "raw": "</div>",
        "startCol": 13,
        "startLine": 28,
        "startOffset": 943,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<div>",
      "selfClosingSolidus": {
        "endCol": 17,
        "endLine": 24,
        "endOffset": 857,
        "raw": "",
        "startCol": 17,
        "startLine": 24,
        "startOffset": 857,
      },
      "startCol": 13,
      "startLine": 24,
      "startOffset": 853,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 15,
      "endLine": 26,
      "endOffset": 893,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              Text1
              ",
      "startCol": 18,
      "startLine": 24,
      "startOffset": 858,
      "type": "text",
    },
    {
      "attributes": [],
      "depth": 0,
      "elementType": "html",
      "endCol": 21,
      "endLine": 26,
      "endOffset": 899,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "span",
      "pairNode": {
        "depth": 0,
        "endCol": 32,
        "endLine": 26,
        "endOffset": 910,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "span",
        "pairNode": [Circular],
        "raw": "</span>",
        "startCol": 25,
        "startLine": 26,
        "startOffset": 903,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<span>",
      "selfClosingSolidus": {
        "endCol": 20,
        "endLine": 26,
        "endOffset": 898,
        "raw": "",
        "startCol": 20,
        "startLine": 26,
        "startOffset": 898,
      },
      "startCol": 15,
      "startLine": 26,
      "startOffset": 893,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 25,
      "endLine": 26,
      "endOffset": 903,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "Text",
      "startCol": 21,
      "startLine": 26,
      "startOffset": 899,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 32,
      "endLine": 26,
      "endOffset": 910,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "span",
      "pairNode": {
        "attributes": [],
        "depth": 0,
        "elementType": "html",
        "endCol": 21,
        "endLine": 26,
        "endOffset": 899,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "span",
        "pairNode": [Circular],
        "raw": "<span>",
        "selfClosingSolidus": {
          "endCol": 20,
          "endLine": 26,
          "endOffset": 898,
          "raw": "",
          "startCol": 20,
          "startLine": 26,
          "startOffset": 898,
        },
        "startCol": 15,
        "startLine": 26,
        "startOffset": 893,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</span>",
      "startCol": 25,
      "startLine": 26,
      "startOffset": 903,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 28,
      "endOffset": 943,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
              Text2
            ",
      "startCol": 32,
      "startLine": 26,
      "startOffset": 910,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 19,
      "endLine": 28,
      "endOffset": 949,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "div",
      "pairNode": {
        "attributes": [],
        "depth": 0,
        "elementType": "html",
        "endCol": 18,
        "endLine": 24,
        "endOffset": 858,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "div",
        "pairNode": [Circular],
        "raw": "<div>",
        "selfClosingSolidus": {
          "endCol": 17,
          "endLine": 24,
          "endOffset": 857,
          "raw": "",
          "startCol": 17,
          "startLine": 24,
          "startOffset": 857,
        },
        "startCol": 13,
        "startLine": 24,
        "startOffset": 853,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</div>",
      "startCol": 13,
      "startLine": 28,
      "startOffset": 943,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 29,
      "endOffset": 962,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 19,
      "startLine": 28,
      "startOffset": 949,
      "type": "text",
    },
    {
      "attributes": [
        {
          "endCol": 42,
          "endLine": 29,
          "endOffset": 992,
          "endQuote": {
            "endCol": 42,
            "endLine": 29,
            "endOffset": 992,
            "raw": """,
            "startCol": 41,
            "startLine": 29,
            "startOffset": 991,
          },
          "equal": {
            "endCol": 30,
            "endLine": 29,
            "endOffset": 980,
            "raw": "=",
            "startCol": 29,
            "startLine": 29,
            "startOffset": 979,
          },
          "isDuplicatable": false,
          "isDynamicValue": undefined,
          "name": {
            "endCol": 29,
            "endLine": 29,
            "endOffset": 979,
            "raw": "@triggerName",
            "startCol": 17,
            "startLine": 29,
            "startOffset": 967,
          },
          "nodeName": "@triggerName",
          "potentialName": "triggerName",
          "raw": "@triggerName="expression"",
          "spacesAfterEqual": {
            "endCol": 30,
            "endLine": 29,
            "endOffset": 980,
            "raw": "",
            "startCol": 30,
            "startLine": 29,
            "startOffset": 980,
          },
          "spacesBeforeEqual": {
            "endCol": 29,
            "endLine": 29,
            "endOffset": 979,
            "raw": "",
            "startCol": 29,
            "startLine": 29,
            "startOffset": 979,
          },
          "spacesBeforeName": {
            "endCol": 17,
            "endLine": 29,
            "endOffset": 967,
            "raw": "",
            "startCol": 17,
            "startLine": 29,
            "startOffset": 967,
          },
          "startCol": 17,
          "startLine": 29,
          "startOffset": 967,
          "startQuote": {
            "endCol": 31,
            "endLine": 29,
            "endOffset": 981,
            "raw": """,
            "startCol": 30,
            "startLine": 29,
            "startOffset": 980,
          },
          "type": "attr",
          "value": {
            "endCol": 41,
            "endLine": 29,
            "endOffset": 991,
            "raw": "expression",
            "startCol": 31,
            "startLine": 29,
            "startOffset": 981,
          },
        },
      ],
      "depth": 0,
      "elementType": "html",
      "endCol": 44,
      "endLine": 29,
      "endOffset": 993,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "pairNode": {
        "depth": 0,
        "endCol": 50,
        "endLine": 29,
        "endOffset": 999,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "div",
        "pairNode": [Circular],
        "raw": "</div>",
        "startCol": 44,
        "startLine": 29,
        "startOffset": 993,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<div @triggerName="expression">",
      "selfClosingSolidus": {
        "endCol": 17,
        "endLine": 29,
        "endOffset": 966,
        "raw": "",
        "startCol": 17,
        "startLine": 29,
        "startOffset": 966,
      },
      "startCol": 13,
      "startLine": 29,
      "startOffset": 962,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 50,
      "endLine": 29,
      "endOffset": 999,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "div",
      "pairNode": {
        "attributes": [
          {
            "endCol": 42,
            "endLine": 29,
            "endOffset": 992,
            "endQuote": {
              "endCol": 42,
              "endLine": 29,
              "endOffset": 992,
              "raw": """,
              "startCol": 41,
              "startLine": 29,
              "startOffset": 991,
            },
            "equal": {
              "endCol": 30,
              "endLine": 29,
              "endOffset": 980,
              "raw": "=",
              "startCol": 29,
              "startLine": 29,
              "startOffset": 979,
            },
            "isDuplicatable": false,
            "isDynamicValue": undefined,
            "name": {
              "endCol": 29,
              "endLine": 29,
              "endOffset": 979,
              "raw": "@triggerName",
              "startCol": 17,
              "startLine": 29,
              "startOffset": 967,
            },
            "nodeName": "@triggerName",
            "potentialName": "triggerName",
            "raw": "@triggerName="expression"",
            "spacesAfterEqual": {
              "endCol": 30,
              "endLine": 29,
              "endOffset": 980,
              "raw": "",
              "startCol": 30,
              "startLine": 29,
              "startOffset": 980,
            },
            "spacesBeforeEqual": {
              "endCol": 29,
              "endLine": 29,
              "endOffset": 979,
              "raw": "",
              "startCol": 29,
              "startLine": 29,
              "startOffset": 979,
            },
            "spacesBeforeName": {
              "endCol": 17,
              "endLine": 29,
              "endOffset": 967,
              "raw": "",
              "startCol": 17,
              "startLine": 29,
              "startOffset": 967,
            },
            "startCol": 17,
            "startLine": 29,
            "startOffset": 967,
            "startQuote": {
              "endCol": 31,
              "endLine": 29,
              "endOffset": 981,
              "raw": """,
              "startCol": 30,
              "startLine": 29,
              "startOffset": 980,
            },
            "type": "attr",
            "value": {
              "endCol": 41,
              "endLine": 29,
              "endOffset": 991,
              "raw": "expression",
              "startCol": 31,
              "startLine": 29,
              "startOffset": 981,
            },
          },
        ],
        "depth": 0,
        "elementType": "html",
        "endCol": 44,
        "endLine": 29,
        "endOffset": 993,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "div",
        "pairNode": [Circular],
        "raw": "<div @triggerName="expression">",
        "selfClosingSolidus": {
          "endCol": 17,
          "endLine": 29,
          "endOffset": 966,
          "raw": "",
          "startCol": 17,
          "startLine": 29,
          "startOffset": 966,
        },
        "startCol": 13,
        "startLine": 29,
        "startOffset": 962,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</div>",
      "startCol": 44,
      "startLine": 29,
      "startOffset": 993,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 13,
      "endLine": 30,
      "endOffset": 1012,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
            ",
      "startCol": 50,
      "startLine": 29,
      "startOffset": 999,
      "type": "text",
    },
    {
      "attributes": [
        {
          "endCol": 46,
          "endLine": 30,
          "endOffset": 1046,
          "endQuote": {
            "endCol": 46,
            "endLine": 30,
            "endOffset": 1046,
            "raw": """,
            "startCol": 45,
            "startLine": 30,
            "startOffset": 1045,
          },
          "equal": {
            "endCol": 32,
            "endLine": 30,
            "endOffset": 1032,
            "raw": "=",
            "startCol": 31,
            "startLine": 30,
            "startOffset": 1031,
          },
          "isDuplicatable": false,
          "isDynamicValue": true,
          "name": {
            "endCol": 31,
            "endLine": 30,
            "endOffset": 1031,
            "raw": "[@triggerName]",
            "startCol": 17,
            "startLine": 30,
            "startOffset": 1017,
          },
          "nodeName": "[@triggerName]",
          "potentialName": "triggerName",
          "raw": "[@triggerName]="'expression'"",
          "spacesAfterEqual": {
            "endCol": 32,
            "endLine": 30,
            "endOffset": 1032,
            "raw": "",
            "startCol": 32,
            "startLine": 30,
            "startOffset": 1032,
          },
          "spacesBeforeEqual": {
            "endCol": 31,
            "endLine": 30,
            "endOffset": 1031,
            "raw": "",
            "startCol": 31,
            "startLine": 30,
            "startOffset": 1031,
          },
          "spacesBeforeName": {
            "endCol": 17,
            "endLine": 30,
            "endOffset": 1017,
            "raw": "",
            "startCol": 17,
            "startLine": 30,
            "startOffset": 1017,
          },
          "startCol": 17,
          "startLine": 30,
          "startOffset": 1017,
          "startQuote": {
            "endCol": 33,
            "endLine": 30,
            "endOffset": 1033,
            "raw": """,
            "startCol": 32,
            "startLine": 30,
            "startOffset": 1032,
          },
          "type": "attr",
          "value": {
            "endCol": 45,
            "endLine": 30,
            "endOffset": 1045,
            "raw": "'expression'",
            "startCol": 33,
            "startLine": 30,
            "startOffset": 1033,
          },
        },
      ],
      "depth": 0,
      "elementType": "html",
      "endCol": 48,
      "endLine": 30,
      "endOffset": 1047,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "div",
      "pairNode": {
        "depth": 0,
        "endCol": 54,
        "endLine": 30,
        "endOffset": 1053,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "div",
        "pairNode": [Circular],
        "raw": "</div>",
        "startCol": 48,
        "startLine": 30,
        "startOffset": 1047,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<div [@triggerName]="'expression'">",
      "selfClosingSolidus": {
        "endCol": 17,
        "endLine": 30,
        "endOffset": 1016,
        "raw": "",
        "startCol": 17,
        "startLine": 30,
        "startOffset": 1016,
      },
      "startCol": 13,
      "startLine": 30,
      "startOffset": 1012,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 54,
      "endLine": 30,
      "endOffset": 1053,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "div",
      "pairNode": {
        "attributes": [
          {
            "endCol": 46,
            "endLine": 30,
            "endOffset": 1046,
            "endQuote": {
              "endCol": 46,
              "endLine": 30,
              "endOffset": 1046,
              "raw": """,
              "startCol": 45,
              "startLine": 30,
              "startOffset": 1045,
            },
            "equal": {
              "endCol": 32,
              "endLine": 30,
              "endOffset": 1032,
              "raw": "=",
              "startCol": 31,
              "startLine": 30,
              "startOffset": 1031,
            },
            "isDuplicatable": false,
            "isDynamicValue": true,
            "name": {
              "endCol": 31,
              "endLine": 30,
              "endOffset": 1031,
              "raw": "[@triggerName]",
              "startCol": 17,
              "startLine": 30,
              "startOffset": 1017,
            },
            "nodeName": "[@triggerName]",
            "potentialName": "triggerName",
            "raw": "[@triggerName]="'expression'"",
            "spacesAfterEqual": {
              "endCol": 32,
              "endLine": 30,
              "endOffset": 1032,
              "raw": "",
              "startCol": 32,
              "startLine": 30,
              "startOffset": 1032,
            },
            "spacesBeforeEqual": {
              "endCol": 31,
              "endLine": 30,
              "endOffset": 1031,
              "raw": "",
              "startCol": 31,
              "startLine": 30,
              "startOffset": 1031,
            },
            "spacesBeforeName": {
              "endCol": 17,
              "endLine": 30,
              "endOffset": 1017,
              "raw": "",
              "startCol": 17,
              "startLine": 30,
              "startOffset": 1017,
            },
            "startCol": 17,
            "startLine": 30,
            "startOffset": 1017,
            "startQuote": {
              "endCol": 33,
              "endLine": 30,
              "endOffset": 1033,
              "raw": """,
              "startCol": 32,
              "startLine": 30,
              "startOffset": 1032,
            },
            "type": "attr",
            "value": {
              "endCol": 45,
              "endLine": 30,
              "endOffset": 1045,
              "raw": "'expression'",
              "startCol": 33,
              "startLine": 30,
              "startOffset": 1033,
            },
          },
        ],
        "depth": 0,
        "elementType": "html",
        "endCol": 48,
        "endLine": 30,
        "endOffset": 1047,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "div",
        "pairNode": [Circular],
        "raw": "<div [@triggerName]="'expression'">",
        "selfClosingSolidus": {
          "endCol": 17,
          "endLine": 30,
          "endOffset": 1016,
          "raw": "",
          "startCol": 17,
          "startLine": 30,
          "startOffset": 1016,
        },
        "startCol": 13,
        "startLine": 30,
        "startOffset": 1012,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</div>",
      "startCol": 48,
      "startLine": 30,
      "startOffset": 1047,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 11,
      "endLine": 31,
      "endOffset": 1064,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
          ",
      "startCol": 54,
      "startLine": 30,
      "startOffset": 1053,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 18,
      "endLine": 31,
      "endOffset": 1071,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "body",
      "pairNode": {
        "attributes": [],
        "depth": 0,
        "elementType": "html",
        "endCol": 17,
        "endLine": 10,
        "endOffset": 489,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "body",
        "pairNode": [Circular],
        "raw": "<body>",
        "selfClosingSolidus": {
          "endCol": 16,
          "endLine": 10,
          "endOffset": 488,
          "raw": "",
          "startCol": 16,
          "startLine": 10,
          "startOffset": 488,
        },
        "startCol": 11,
        "startLine": 10,
        "startOffset": 483,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</body>",
      "startCol": 11,
      "startLine": 31,
      "startOffset": 1064,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 9,
      "endLine": 32,
      "endOffset": 1080,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 18,
      "startLine": 31,
      "startOffset": 1071,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 16,
      "endLine": 32,
      "endOffset": 1087,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "html",
      "pairNode": {
        "attributes": [
          {
            "endCol": 23,
            "endLine": 9,
            "endOffset": 471,
            "endQuote": {
              "endCol": 23,
              "endLine": 9,
              "endOffset": 471,
              "raw": """,
              "startCol": 22,
              "startLine": 9,
              "startOffset": 470,
            },
            "equal": {
              "endCol": 19,
              "endLine": 9,
              "endOffset": 467,
              "raw": "=",
              "startCol": 18,
              "startLine": 9,
              "startOffset": 466,
            },
            "isDuplicatable": false,
            "isDynamicValue": undefined,
            "name": {
              "endCol": 18,
              "endLine": 9,
              "endOffset": 466,
              "raw": "lang",
              "startCol": 14,
              "startLine": 9,
              "startOffset": 462,
            },
            "nodeName": "lang",
            "potentialName": "lang",
            "raw": "lang="en"",
            "spacesAfterEqual": {
              "endCol": 19,
              "endLine": 9,
              "endOffset": 467,
              "raw": "",
              "startCol": 19,
              "startLine": 9,
              "startOffset": 467,
            },
            "spacesBeforeEqual": {
              "endCol": 18,
              "endLine": 9,
              "endOffset": 466,
              "raw": "",
              "startCol": 18,
              "startLine": 9,
              "startOffset": 466,
            },
            "spacesBeforeName": {
              "endCol": 14,
              "endLine": 9,
              "endOffset": 462,
              "raw": "",
              "startCol": 14,
              "startLine": 9,
              "startOffset": 462,
            },
            "startCol": 14,
            "startLine": 9,
            "startOffset": 462,
            "startQuote": {
              "endCol": 20,
              "endLine": 9,
              "endOffset": 468,
              "raw": """,
              "startCol": 19,
              "startLine": 9,
              "startOffset": 467,
            },
            "type": "attr",
            "value": {
              "endCol": 22,
              "endLine": 9,
              "endOffset": 470,
              "raw": "en",
              "startCol": 20,
              "startLine": 9,
              "startOffset": 468,
            },
          },
        ],
        "depth": 0,
        "elementType": "html",
        "endCol": 25,
        "endLine": 9,
        "endOffset": 472,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "html",
        "pairNode": [Circular],
        "raw": "<html lang="en">",
        "selfClosingSolidus": {
          "endCol": 14,
          "endLine": 9,
          "endOffset": 461,
          "raw": "",
          "startCol": 14,
          "startLine": 9,
          "startOffset": 461,
        },
        "startCol": 9,
        "startLine": 9,
        "startOffset": 456,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</html>",
      "startCol": 9,
      "startLine": 32,
      "startOffset": 1080,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 7,
      "endLine": 33,
      "endOffset": 1094,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
      ",
      "startCol": 16,
      "startLine": 32,
      "startOffset": 1087,
      "type": "text",
    },
  ],
  "raw": "
        <!DOCTYPE html>
        <![CDATA[ Within this Character Data block I can use double dashes as
        much as I want (along with <, &, ', and ") *and* %MyParamEntity; will be
        expanded to the text "Has been expanded" ... however, I can't use the
        CEND sequence. If I need to use CEND I must escape one of the brackets
        or the greater-than sign using concatenated CDATA sections. ]]>
        <!-- top level comment -->
        <html lang="en">
          <body>
            <!-- body comment -->
            <input [type]="'text'" />
            <input
              type="radio"
              [checked]="true"
            />
            <input
              type="number"
              [value]="123"
            />
            <select>
              <option selected="{{ true }}"></option>
            </select>
            <div>
              Text1
              <span>Text</span>
              Text2
            </div>
            <div @triggerName="expression"></div>
            <div [@triggerName]="'expression'"></div>
          </body>
        </html>
      ",
}
`;

exports[`parser > tag namespace 1`] = `
{
  "isFragment": true,
  "nodeList": [
    {
      "depth": 0,
      "endCol": 7,
      "endLine": 2,
      "endOffset": 7,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
      ",
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "type": "text",
    },
    {
      "attributes": [],
      "depth": 0,
      "elementType": "html",
      "endCol": 17,
      "endLine": 2,
      "endOffset": 17,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/2000/svg",
      "nodeName": "svg:defs",
      "pairNode": {
        "depth": 0,
        "endCol": 18,
        "endLine": 4,
        "endOffset": 85,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "svg:defs",
        "pairNode": [Circular],
        "raw": "</svg:defs>",
        "startCol": 7,
        "startLine": 4,
        "startOffset": 74,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<svg:defs>",
      "selfClosingSolidus": {
        "endCol": 16,
        "endLine": 2,
        "endOffset": 16,
        "raw": "",
        "startCol": 16,
        "startLine": 2,
        "startOffset": 16,
      },
      "startCol": 7,
      "startLine": 2,
      "startOffset": 7,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 9,
      "endLine": 3,
      "endOffset": 26,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
        ",
      "startCol": 17,
      "startLine": 2,
      "startOffset": 17,
      "type": "text",
    },
    {
      "attributes": [],
      "depth": 0,
      "elementType": "html",
      "endCol": 29,
      "endLine": 3,
      "endOffset": 46,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/2000/svg",
      "nodeName": "svg:linearGradient",
      "pairNode": {
        "depth": 0,
        "endCol": 50,
        "endLine": 3,
        "endOffset": 67,
        "isFragment": false,
        "isGhost": false,
        "nodeName": "svg:linearGradient",
        "pairNode": [Circular],
        "raw": "</svg:linearGradient>",
        "startCol": 29,
        "startLine": 3,
        "startOffset": 46,
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      "raw": "<svg:linearGradient>",
      "selfClosingSolidus": {
        "endCol": 28,
        "endLine": 3,
        "endOffset": 45,
        "raw": "",
        "startCol": 28,
        "startLine": 3,
        "startOffset": 45,
      },
      "startCol": 9,
      "startLine": 3,
      "startOffset": 26,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
    {
      "depth": 0,
      "endCol": 50,
      "endLine": 3,
      "endOffset": 67,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "svg:linearGradient",
      "pairNode": {
        "attributes": [],
        "depth": 0,
        "elementType": "html",
        "endCol": 29,
        "endLine": 3,
        "endOffset": 46,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/2000/svg",
        "nodeName": "svg:linearGradient",
        "pairNode": [Circular],
        "raw": "<svg:linearGradient>",
        "selfClosingSolidus": {
          "endCol": 28,
          "endLine": 3,
          "endOffset": 45,
          "raw": "",
          "startCol": 28,
          "startLine": 3,
          "startOffset": 45,
        },
        "startCol": 9,
        "startLine": 3,
        "startOffset": 26,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</svg:linearGradient>",
      "startCol": 29,
      "startLine": 3,
      "startOffset": 46,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 7,
      "endLine": 4,
      "endOffset": 74,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
      ",
      "startCol": 50,
      "startLine": 3,
      "startOffset": 67,
      "type": "text",
    },
    {
      "depth": 0,
      "endCol": 18,
      "endLine": 4,
      "endOffset": 85,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "svg:defs",
      "pairNode": {
        "attributes": [],
        "depth": 0,
        "elementType": "html",
        "endCol": 17,
        "endLine": 2,
        "endOffset": 17,
        "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/2000/svg",
        "nodeName": "svg:defs",
        "pairNode": [Circular],
        "raw": "<svg:defs>",
        "selfClosingSolidus": {
          "endCol": 16,
          "endLine": 2,
          "endOffset": 16,
          "raw": "",
          "startCol": 16,
          "startLine": 2,
          "startOffset": 16,
        },
        "startCol": 7,
        "startLine": 2,
        "startOffset": 7,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      "raw": "</svg:defs>",
      "startCol": 7,
      "startLine": 4,
      "startOffset": 74,
      "tagCloseChar": ">",
      "tagOpenChar": "</",
      "type": "endtag",
    },
    {
      "depth": 0,
      "endCol": 5,
      "endLine": 5,
      "endOffset": 90,
      "isFragment": false,
      "isGhost": false,
      "nodeName": "#text",
      "raw": "
    ",
      "startCol": 18,
      "startLine": 4,
      "startOffset": 85,
      "type": "text",
    },
  ],
  "raw": "
      <svg:defs>
        <svg:linearGradient></svg:linearGradient>
      </svg:defs>
    ",
}
`;

exports[`parser > tag namespace 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,10 +4,12 @@
      Object {
        "depth": 0,
        "endCol": 7,
        "endLine": 2,
        "endOffset": 7,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "
        ",
        "startCol": 1,
        "startLine": 1,
@@ -19,19 +21,22 @@
        "depth": 0,
        "elementType": "html",
        "endCol": 17,
        "endLine": 2,
        "endOffset": 17,
+       "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
-       "namespace": "http://www.w3.org/1999/xhtml",
+       "namespace": "http://www.w3.org/2000/svg",
        "nodeName": "svg:defs",
        "pairNode": Object {
          "depth": 0,
          "endCol": 18,
          "endLine": 4,
          "endOffset": 85,
+         "isFragment": false,
+         "isGhost": false,
          "nodeName": "svg:defs",
          "pairNode": [Circular],
          "raw": "</svg:defs>",
          "startCol": 7,
          "startLine": 4,
@@ -40,54 +45,59 @@
          "tagOpenChar": "</",
          "type": "endtag",
        },
        "raw": "<svg:defs>",
        "selfClosingSolidus": Object {
-         "endCol": 8,
+         "endCol": 16,
          "endLine": 2,
-         "endOffset": 8,
+         "endOffset": 16,
          "raw": "",
-         "startCol": 8,
+         "startCol": 16,
          "startLine": 2,
-         "startOffset": 8,
+         "startOffset": 16,
        },
        "startCol": 7,
        "startLine": 2,
        "startOffset": 7,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      Object {
-       "depth": 1,
+       "depth": 0,
        "endCol": 9,
        "endLine": 3,
        "endOffset": 26,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "
          ",
        "startCol": 17,
        "startLine": 2,
        "startOffset": 17,
        "type": "text",
      },
      Object {
        "attributes": Array [],
-       "depth": 1,
+       "depth": 0,
        "elementType": "html",
        "endCol": 29,
        "endLine": 3,
        "endOffset": 46,
+       "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
-       "namespace": "http://www.w3.org/1999/xhtml",
+       "namespace": "http://www.w3.org/2000/svg",
        "nodeName": "svg:linearGradient",
        "pairNode": Object {
-         "depth": 1,
+         "depth": 0,
          "endCol": 50,
          "endLine": 3,
          "endOffset": 67,
+         "isFragment": false,
+         "isGhost": false,
          "nodeName": "svg:linearGradient",
          "pairNode": [Circular],
          "raw": "</svg:linearGradient>",
          "startCol": 29,
          "startLine": 3,
@@ -96,52 +106,55 @@
          "tagOpenChar": "</",
          "type": "endtag",
        },
        "raw": "<svg:linearGradient>",
        "selfClosingSolidus": Object {
-         "endCol": 10,
+         "endCol": 28,
          "endLine": 3,
-         "endOffset": 27,
+         "endOffset": 45,
          "raw": "",
-         "startCol": 10,
+         "startCol": 28,
          "startLine": 3,
-         "startOffset": 27,
+         "startOffset": 45,
        },
        "startCol": 9,
        "startLine": 3,
        "startOffset": 26,
        "tagCloseChar": ">",
        "tagOpenChar": "<",
        "type": "starttag",
      },
      Object {
-       "depth": 1,
+       "depth": 0,
        "endCol": 50,
        "endLine": 3,
        "endOffset": 67,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "svg:linearGradient",
        "pairNode": Object {
          "attributes": Array [],
-         "depth": 1,
+         "depth": 0,
          "elementType": "html",
          "endCol": 29,
          "endLine": 3,
          "endOffset": 46,
+         "hasSpreadAttr": false,
          "isFragment": false,
          "isGhost": false,
-         "namespace": "http://www.w3.org/1999/xhtml",
+         "namespace": "http://www.w3.org/2000/svg",
          "nodeName": "svg:linearGradient",
          "pairNode": [Circular],
          "raw": "<svg:linearGradient>",
          "selfClosingSolidus": Object {
-           "endCol": 10,
+           "endCol": 28,
            "endLine": 3,
-           "endOffset": 27,
+           "endOffset": 45,
            "raw": "",
-           "startCol": 10,
+           "startCol": 28,
            "startLine": 3,
-           "startOffset": 27,
+           "startOffset": 45,
          },
          "startCol": 9,
          "startLine": 3,
          "startOffset": 26,
          "tagCloseChar": ">",
@@ -155,14 +168,16 @@
        "tagCloseChar": ">",
        "tagOpenChar": "</",
        "type": "endtag",
      },
      Object {
-       "depth": 1,
+       "depth": 0,
        "endCol": 7,
        "endLine": 4,
        "endOffset": 74,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "
        ",
        "startCol": 50,
        "startLine": 3,
@@ -172,32 +187,35 @@
      Object {
        "depth": 0,
        "endCol": 18,
        "endLine": 4,
        "endOffset": 85,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "svg:defs",
        "pairNode": Object {
          "attributes": Array [],
          "depth": 0,
          "elementType": "html",
          "endCol": 17,
          "endLine": 2,
          "endOffset": 17,
+         "hasSpreadAttr": false,
          "isFragment": false,
          "isGhost": false,
-         "namespace": "http://www.w3.org/1999/xhtml",
+         "namespace": "http://www.w3.org/2000/svg",
          "nodeName": "svg:defs",
          "pairNode": [Circular],
          "raw": "<svg:defs>",
          "selfClosingSolidus": Object {
-           "endCol": 8,
+           "endCol": 16,
            "endLine": 2,
-           "endOffset": 8,
+           "endOffset": 16,
            "raw": "",
-           "startCol": 8,
+           "startCol": 16,
            "startLine": 2,
-           "startOffset": 8,
+           "startOffset": 16,
          },
          "startCol": 7,
          "startLine": 2,
          "startOffset": 7,
          "tagCloseChar": ">",
@@ -215,10 +233,12 @@
      Object {
        "depth": 0,
        "endCol": 5,
        "endLine": 5,
        "endOffset": 90,
+       "isFragment": false,
+       "isGhost": false,
        "nodeName": "#text",
        "raw": "
      ",
        "startCol": 18,
        "startLine": 4,"
`;

exports[`parser > void element 1`] = `
{
  "isFragment": true,
  "nodeList": [
    {
      "attributes": [],
      "depth": 0,
      "elementType": "html",
      "endCol": 6,
      "endLine": 1,
      "endOffset": 5,
      "hasSpreadAttr": false,
      "isFragment": false,
      "isGhost": false,
      "namespace": "http://www.w3.org/1999/xhtml",
      "nodeName": "img",
      "pairNode": null,
      "raw": "<img>",
      "selfClosingSolidus": {
        "endCol": 5,
        "endLine": 1,
        "endOffset": 4,
        "raw": "",
        "startCol": 5,
        "startLine": 1,
        "startOffset": 4,
      },
      "startCol": 1,
      "startLine": 1,
      "startOffset": 0,
      "tagCloseChar": ">",
      "tagOpenChar": "<",
      "type": "starttag",
    },
  ],
  "raw": "<img>",
}
`;

exports[`parser > void element 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,24 +6,25 @@
        "depth": 0,
        "elementType": "html",
        "endCol": 6,
        "endLine": 1,
        "endOffset": 5,
+       "hasSpreadAttr": false,
        "isFragment": false,
        "isGhost": false,
        "namespace": "http://www.w3.org/1999/xhtml",
        "nodeName": "img",
        "pairNode": null,
        "raw": "<img>",
        "selfClosingSolidus": Object {
-         "endCol": 2,
+         "endCol": 5,
          "endLine": 1,
-         "endOffset": 1,
+         "endOffset": 4,
          "raw": "",
-         "startCol": 2,
+         "startCol": 5,
          "startLine": 1,
-         "startOffset": 1,
+         "startOffset": 4,
        },
        "startCol": 1,
        "startLine": 1,
        "startOffset": 0,
        "tagCloseChar": ">","
`;
